2003-11-08  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/timidity.c (parse_opt_p): max voices to be changeable
	(timidity_init_player): ditto.
	* timidity/mac_dlog.c (mac_SetPlayOption): ditto.
	* timidity/playmidi.h (max_voices): Add.
	* timidity/playmidi.c (max_voices): Add.
	* timidity/timidity.h (MAX_VOICES): Delete.

2003-11-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Adjust Pythagoras tuning and pure intonation in a stricter theory

2003-11-05  Takashi Iwai <tiwai@suse.de>

	* timidity/alsa_a.c: Fixed bogus calculation of GETSAMPLES.

2003-11-05  mput <root@mput.dip.jp>

	* timidity/readmidi.c: Reindent.

2003-11-04  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/readmidi.c (set_xg_reverb_type): Add.
	(parse_sysex_event_multi): Support for XG SysEx. reverb/chorus types

2003-11-01  Saito <saito2@digitalme.com>

	* timidity/sndfont.c:
	  Fix behaviour of SoundFont's scale-tuning like SB-Live!.
	* timidity/playmidi.c:
	  Add opt_pan_delay.

2003-11-01  mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_h): Fix in help message
	  (parse_opt_j): Enforce returning a int value
	  (parse_opt_Z1): ditto
	  (parse_opt_fail): Change exit status to EXIT_FAILURE

2003-10-31  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix initialization of drumsets on synthesizer modes.

2003-10-30  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (set_reverb_level, get_reverb_level):
	  More flexibility for reverb level
	* timidity/timidity.c (parse_opt_reverb): Fix for case 0

2003-10-28  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c, timidity/effect.c, timidity/timidity.c:
	  The user can now set the reverb level of any of the reverb modes.

2003-10-27  Kentaro Sato <kentaro@ranvis.com>

	* timidity/effect.c: Fixed noise shaping filter bug.

2003-10-26  Saito <saito2@digitalme.com>

	* timidity/mix.c, timidity/tables.[ch], playmidi.[ch]: